--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
+	Adding changes before rebase conflicts
 -->
 <head>
 	<title>A Very Respectful Website</title>
