fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Silly random changes
 -->
 <head>
-	<title>Silly random changes</title>
+	<title>Lots of something</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Junk filler content -->
 		<p>
-			Just some content
+			Just nothing but trouble.
 		</p>
 	</main>
 	<footer class="container">
