mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Adding changes before rebase conflicts
+	Silly random changes
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly random changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filler content -->
 		<p>
 			Just some content
 		</p>
