Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git.Training
-	Silly random changes
 -->
 <head>
-	<title>Lots of something</title>
+	<title>Lots of something, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
