--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.Training
 -->
 <head>
-	<title>Lots of something, in a little repo</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk filler content -->
 		<p>
-			Just nothing but trouble.
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
